--- a/admin/layout/css/backend.css
+++ b/admin/layout/css/backend.css
@@ -74,3 +74,12 @@ body {
     background-color: #8E44AD;
 }
 /* End Bootsrtrap Edits */
+
+/* Start Member Page */
+
+h1 {
+    font-size:  55px;
+    margin: 20px 0;
+    font-weight: bold;
+    color: #666;
+}
