--- a/admin/layout/css/backend.css
+++ b/admin/layout/css/backend.css
@@ -91,6 +91,20 @@ body {
   font-size: 15px;
   color: #fff;
   border-radius: 10px;
+  position: relative;
+  overflow: hidden;
+
+}
+
+.home-stats .stat i {
+  position: absolute;
+  font-size: 80px;
+  top: 35px;
+  left: 30px;
+}
+
+.home-stats .stat .info {
+  float: right;
 }
 
 .home-stats .stat a {
@@ -124,6 +138,15 @@ body {
 
 .latest {
   margin-top: 30px;
+}
+
+.latest .toggle-info {
+  color: #999;
+  cursor: pointer;
+}
+
+.latest .toggle-info:hover {
+  color: #444;
 }
 
 .latest-users {
