--- a/layout/css/front.css
+++ b/layout/css/front.css
@@ -2,6 +2,7 @@
 body {
   font-size: 16px;
   background-color: #f4f4f4;
+  height: 3000px;
 }
 
 h1 {
@@ -188,4 +189,49 @@ h1 {
   width: 120px;
 }
 
+.thumbnail .date {
+  text-align: right;
+  font-size: 13px;
+  color: #AAA;
+  font-weight: bold;
+}
 /* End Profile Page */
+
+/* Start Show Items Page */
+
+.item-info h2 {
+  padding: 10px;
+}
+
+.item-info p {
+  padding: 10px;
+}
+
+.item-info ul li {
+  padding: 10px;
+}
+
+.item-info ul li:nth-child(odd) {
+  background-color: #e8e8e8;
+}
+
+.item-info ul li span {
+  display: inline-block;
+  width: 120px;
+}
+
+.add-comment h3 {
+  margin: 0 0 10px;
+}
+
+.add-comment textarea {
+  display: block;
+  margin-bottom: 10px;
+  width: 500px;
+  height: 120px;
+}
+
+/* Start Our Custom */
+.custom-hr {
+  border-top: 1px solid #c9c9c9;
+}
