--- a/layout/css/front.css
+++ b/layout/css/front.css
@@ -231,6 +231,34 @@ h1 {
   height: 120px;
 }
 
+.comment-box {
+  margin-bottom: 20px;
+}
+
+.comment-box img {
+  max-width: 100px;
+  margin-bottom: 10px;
+}
+
+.comment-box .lead {
+  background-color: #e0e0e0;
+  position: relative;
+  padding: 10px;
+  margin-top: 25px;
+}
+
+.comment-box .lead:before {
+  content: "";
+  width: 0;
+  height: 0;
+  border-width: 15px;
+  border-style: solid;
+  border-color: transparent #e0e0e0 transparent transparent;
+  position: absolute;
+  left: -28px;
+  top: 10px;
+}
+
 /* Start Our Custom */
 .custom-hr {
   border-top: 1px solid #c9c9c9;
