--- a/admin/layout/css/backend.css
+++ b/admin/layout/css/backend.css
@@ -358,3 +358,25 @@ h1 {
 .categories .add-category {
   margin-bottom: 30px;
 }
+
+.categories .child-head {
+  margin: 15px 0 10px;
+  font-weight: bold;
+  font-size: 16px;
+  color: #22ab79;
+}
+
+.categories .child-cats {
+  margin: 0;
+}
+
+.categories .child-cats li {
+  margin-left: 15px;
+}
+
+.categories .child-cats li:before {
+  content: "- ";
+}
+
+.categories .show-delete {
+  color: #f00;}
