--- a/admin/layout/css/backend.css
+++ b/admin/layout/css/backend.css
@@ -232,6 +232,13 @@ h1 {
   /* cursor: pointer; */
 }
 
+.manage-members img {
+  width: 50px;
+  height: 50px;
+  /* border-radius: 50%; */
+  /* margin-right: 10px; */
+}
+
 .main-table {
   -webkit-box-shadow: 0 3px 10px #ccc;
   -moz-box-shadow: 0 3px 10px #ccc;
@@ -255,7 +262,6 @@ h1 {
 .activate {
   margin-left: 5px;
 }
-
 /* End Member Page */
 
 /* Start Category Page */
